# bus_arrival

./: --announce  .gitignore  .graphifyignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  README.md.old.del  arrivals.jsonl  arrivals_test.jsonl  crates.txt  debug_stops  debug_stops.rs  ground_truth.json  heading_stress_test_trace.jsonl  noble-chasing-flask.md  phase2_test.jsonl  pico2_firmware_source.txt  repomix-output.txt  rust_out  scenario_test_results.md  test.nmea  test_gauss  test_gauss.rs  test_heading_conversion  test_lut2  test_lut2.rs  test_lut3  test_lut3.rs  test_results.txt  test_size.rs  trace.jsonl  trace_test.jsonl  ty225.jsonl  ty225.nmea  ty225_arrivals.jsonl  ty225_trace.jsonl
.cargo/: config.toml
.claude/: settings.json
.serena/: project.yml
arrival_detector/: Cargo.toml
crates/pico2-firmware/: Cargo.toml  README.md  build  build.rs  memory.x
crates/pico2-firmware/src/: detection.rs  lib.rs  lut.rs  main.rs  persist.rs  recovery_trigger.rs  state.rs  uart.rs
crates/pico2-firmware/src/control/: mod.rs  mode.rs  timeout.rs
crates/pico2-firmware/src/estimation/: dr.rs  kalman.rs  mod.rs
crates/pico2-firmware/src/recovery/: mod.rs  search.rs
crates/pico2-firmware/tests/: README.md  integration_state_machine.rs  test_adaptive_weights.rs  test_c1_freeze_time_preserved.rs  test_detour_reentry_integration.rs  test_estimation_detection_separation.rs  test_forward_closest_stop.rs  test_monotonic_invariant.rs  test_off_route_integration.rs  test_probability_consistency.rs  test_recovery_integration.rs  test_reset_stop_states_after_snap.rs  test_uart_signed_format.rs  test_uart_timeout.rs  test_warmup.rs  test_warmup_counter.rs
crates/pipeline/: Cargo.toml
crates/pipeline/detection/: Cargo.toml
crates/pipeline/detection/src/: corridor.rs  lib.rs  probability.rs  recovery.rs  state_machine.rs  trace.rs
crates/pipeline/detection/tests/: bdd_arrival.rs  bdd_arrival_edge_cases.rs  bdd_arrival_extended.rs  test_announcement.rs  test_heading_preservation.rs  test_recovery_velocity.rs  trace_output.rs
crates/pipeline/gps_processor/: Cargo.toml  README.md
crates/pipeline/gps_processor/src/: kalman.rs  lib.rs  map_match.rs  nmea.rs  output.rs  route_data.rs  test_stop_size.rs
crates/pipeline/gps_processor/src/kalman/: filters.rs  hysteresis.rs  mod.rs
crates/pipeline/gps_processor/tests/: absolute_coordinates.rs  bdd_localization.rs  extract_stop33.rs  gps_route_alignment.rs  test_active_stops.rs  test_active_stops_integration.rs  test_c2_frozen_s_cm_reset.rs  test_coordinate_alignment.rs  test_dr_decay.rs  test_dr_soft_resync.rs  test_dr_soft_resync_integration.rs  test_ema_velocity_filter.rs  test_find_gps_position.rs  test_format_arrival_event.rs  test_gga_heading.rs  test_ground_truth_match.rs  test_heading_conversion.rs  test_loop_closure_stop.rs  test_map_match.rs  test_map_match_wrap.rs  test_map_match_wrap_debug.rs  test_new_bin_active_stops.rs  test_off_route_detection.rs  test_off_route_jump_recovery.rs  test_route_data_debug.rs  test_route_data_stops.rs  test_speed_constraint.rs  test_verify_stop_at_gps.rs
crates/pipeline/src/: gps.rs  lib.rs  main.rs  serde.rs
crates/pipeline/tests/: integration_test.rs
crates/pipeline/tests/scenarios/: detour_reentry_integration.rs  edge_cases.rs  gps_anomalies.rs  mod.rs  normal.rs  normal_trace_validation.rs  route_edge_cases.rs  signal_loss.rs  snap_recovery_coordination.rs  ty225_short_detour_golden.rs
crates/pipeline/tests/scenarios/common/: exact_validation.rs  mod.rs  order_validation.rs  position_accuracy.rs
crates/preprocessor/: Cargo.toml  tpF805_route.json  tpF805_stops.json
crates/preprocessor/dp_mapper/: Cargo.toml
crates/preprocessor/dp_mapper/src/: lib.rs
crates/preprocessor/dp_mapper/src/candidate/: generator.rs  generator_tests.rs
crates/preprocessor/dp_mapper/src/grid/: builder.rs  mod.rs
crates/preprocessor/dp_mapper/src/pathfinding/: mod.rs  solver.rs
crates/preprocessor/dp_mapper/tests/: dp_solver.rs  edge_cases_dp_algorithm.rs  edge_cases_route_geometry.rs  edge_cases_stop_placement.rs  grid_edge_cases.rs  integration.rs
crates/preprocessor/src/: grid.rs  input.rs  lib.rs  linearize.rs  lut.rs  main.rs  pack.rs  stops.rs
crates/preprocessor/src/stops/: tests.rs  validation.rs
crates/preprocessor/tests/: EDGE_CASE_TEST_PLAN.md  absolute_coordinates.rs  coord_edge_cases.rs  integration_edge_cases.rs  linearize_edge_cases.rs  projection_accuracy.rs  simplify_edge_cases.rs  stop_protection.rs  v8_binary_verification.rs
crates/trace_validator/: Cargo.toml
crates/trace_validator/src/: analyzer.rs  lib.rs  parser.rs
crates/trace_validator/templates/: report.html
crates/trace_validator/tests/: basic_validation.rs
docs/: PRD.md  SPEC.md  binary_format_migration_guide.md  bus_arrival_tech_report_v8.md  claude_review.md  close_stop_arrival_analysis.md  close_stop_fix_analysis_tpF805.md  core_data_flow.md  dev_guide.md  off-route_review_by_claude.md  off_route_state_machine.md  proposal_for_close_stop.md  sequence_constrained_stop_projection_tech_note.md  test.md  (+7 more)
preprocessor/: Cargo.toml
preprocessor/dp_mapper/: Cargo.toml  README.md
preprocessor/dp_mapper/src/: lib.rs
preprocessor/dp_mapper/src/candidate/: generator.rs  mod.rs
preprocessor/dp_mapper/src/grid/: builder.rs  mod.rs
preprocessor/dp_mapper/src/pathfinding/: mod.rs  solver.rs
preprocessor/dp_mapper/tests/: dp_solver.rs  edge_cases_route_geometry.rs  edge_cases_stop_placement.rs  grid_edge_cases.rs  integration.rs
preprocessor/src/: coord.rs  input.rs  lib.rs  linearize.rs  lut.rs  main.rs  pack.rs  simplify.rs  stops.rs
preprocessor/src/stops/: tests.rs  validation.rs
preprocessor/tests/: absolute_coordinates.rs  coord_edge_cases.rs  linearize_edge_cases.rs  simplify_edge_cases.rs  stop_protection.rs  v8_binary_verification.rs
preprocessor/tests/common/: mod.rs
trace_validator/: Cargo.toml
trace_validator/src/: analyzer.rs  lib.rs  main.rs  parser.rs  report.rs  types.rs  validator.rs
trace_validator/tests/: basic_validation.rs
(+240 files in other folders)
