[workspace]
resolver = "2"
members = ["shared", "preprocessor", "preprocessor/dp_mapper", "simulator", "arrival_detector"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
crc32fast = "1.3"
