[workspace]
resolver = "2"
members = ["crates/shared", "crates/preprocessor", "crates/preprocessor/dp_mapper", "crates/trace_validator", "crates/pipeline", "crates/pico2-firmware"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
