[package]
name = "preprocessor"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
crc32fast = { workspace = true }

[[bin]]
name = "preprocessor"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
shared = { path = "../shared" }

