[package]
name = "trace_validator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "trace_validator"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
arrival_detector = { path = "../arrival_detector" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.0"
