[package]
name = "pico2-firmware"
version.workspace = true
edition.workspace = true

[features]
default = []
# Host testing feature (enables std, dev-only)
dev = ["shared/std", "gps_processor/std", "detection/std"]

[dependencies]
shared = { path = "../shared", default-features = false, features = [] }
gps_processor = { path = "../pipeline/gps_processor", default-features = false, features = [] }
detection = { path = "../pipeline/detection", default-features = false, features = [] }

# Embassy RP (replaces rp2040-hal)
embassy-rp = { version = "0.3", default-features = false, features = ["rp235xb", "time-driver", "defmt"] }
embassy-executor = { version = "0.7", default-features = false, features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4", default-features = false, features = ["defmt"] }
embassy-embedded-hal = { version = "0.3", default-features = false, features = [] }

# Core embedded
cortex-m = { version = "0.7", default-features = false }
cortex-m-rt = "0.7"
nb = "1.0"
embedded-hal = "1.0"
embedded-io = "0.6"

# Logging and panic (defmt)
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# For fixed-size Vec in no_std
heapless = { version = "0.8", default-features = false }
