[package]
name = "pico2-firmware"
version.workspace = true
edition.workspace = true

[features]
default = []
# Host testing feature (enables std, dev-only)
dev = ["shared/std", "gps_processor/std", "detection/std"]

[dependencies]
shared = { path = "../shared", default-features = false, features = [] }
gps_processor = { path = "../pipeline/gps_processor", default-features = false, features = [
] }
detection = { path = "../pipeline/detection", default-features = false, features = [
] }

# Embassy RP (replaces rp2040-hal)
embassy-rp = { version = "0.10.0", default-features = false, features = [
    "rp235xb",
    "time-driver",
    "defmt",
] }
embassy-executor = { version = "0.10.0", default-features = false, features = [
    "platform-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.5.1", default-features = false, features = [
    "defmt",
] }
embassy-embedded-hal = { version = "0.6", default-features = false, features = [
] }

# Core embedded
cortex-m = { version = "0.7", default-features = false }
cortex-m-rt = "0.7"
nb = "1.0"
embedded-hal = "1.0"
embedded-io = "0.7.1"

# Logging and panic (defmt)
defmt = "1.0"
defmt-rtt = "1.1"
panic-probe = { version = "1.0", features = ["print-defmt"] }

# For fixed-size Vec in no_std
heapless = { version = "0.9.2", default-features = false }
