[package]
name = "pico2-firmware"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pico2-firmware"
path = "src/main.rs"
required-features = ["firmware"]

[features]
default = []
# Firmware feature (enables all embedded dependencies)
firmware = ["dep:embassy-rp", "dep:embassy-executor", "dep:embassy-time",
            "dep:embassy-embedded-hal", "dep:cortex-m", "dep:cortex-m-rt",
            "dep:nb", "dep:embedded-hal", "dep:embedded-io",
            "dep:defmt", "dep:defmt-rtt", "dep:panic-probe"]
# Host testing feature (enables std, dev-only)
dev = ["shared/std", "gps_processor/std", "detection/std"]

[dependencies]
shared = { path = "../shared", default-features = false, features = [] }
gps_processor = { path = "../pipeline/gps_processor", default-features = false, features = [
] }
detection = { path = "../pipeline/detection", default-features = false, features = [
] }

# Embassy RP (replaces rp2040-hal) - optional for host testing
embassy-rp = { version = "0.10.0", default-features = false, features = [
    "rp235xb",
    "time-driver",
    "defmt",
], optional = true }
embassy-executor = { version = "0.10.0", default-features = false, features = [
    "platform-cortex-m",
    "executor-thread",
    "defmt",
], optional = true }
embassy-time = { version = "0.5.1", default-features = false, features = [
    "defmt",
], optional = true }
embassy-embedded-hal = { version = "0.6", default-features = false, features = [
], optional = true }

# Core embedded - optional for host testing
cortex-m = { version = "0.7", default-features = false, optional = true }
cortex-m-rt = { version = "0.7", optional = true }
nb = { version = "1.0", optional = true }
embedded-hal = { version = "1.0", optional = true }
embedded-io = { version = "0.7.1", optional = true }

# Logging and panic (defmt) - optional for host testing
defmt = { version = "1.0", optional = true }
defmt-rtt = { version = "1.1", optional = true }
panic-probe = { version = "1.0", features = ["print-defmt"], optional = true }

# For fixed-size Vec in no_std
heapless = { version = "0.9.2", default-features = false }
