[package]
name = "pipeline"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared", features = ["std"] }
thiserror = "2.0"
gps_processor = { path = "gps_processor" }
detection = { path = "detection" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "pipeline"
path = "src/main.rs"
