[package]
name = "preprocessor"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared", features = ["std"] }
dp_mapper = { path = "dp_mapper" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bincode = { workspace = true }

[[bin]]
name = "preprocessor"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
shared = { path = "../shared" }

