[package]
name = "detection"
version.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = ["shared/std", "serde", "serde_json"]

[dependencies]
shared = { path = "../../shared", default-features = false }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
