[package]
name = "detection"
version.workspace = true
edition.workspace = true

[features]
default = []
std = ["shared/std", "serde/derive", "serde_json"]

[dependencies]
shared = { path = "../../shared", default-features = false }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
# For floating-point operations in no_std
libm = "0.2"
