[package]
name = "detection"
version.workspace = true
edition.workspace = true

[features]
default = []
std = ["shared/std", "serde/derive", "serde_json"]

[dependencies]
shared = { path = "../../shared", default-features = false }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
# For floating-point operations in no_std
libm = "0.2"

# Integration tests need std enabled
[dev-dependencies]
shared = { path = "../../shared", features = ["serde", "std"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
detection = { path = ".", features = ["std"] }

[[bin]]
name = "gen_luts"
path = "src/bin/gen_luts.rs"
required-features = ["std"]
