[package]
name = "gps_processor"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["shared/std", "serde", "serde_json", "crc32fast/std"]

[dependencies]
shared = { path = "../../shared", default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
crc32fast = { version = "1.3", default-features = false }
