[package]
name = "gps_processor"
version.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = ["shared/std", "serde", "serde_json", "crc32fast/std"]

[dependencies]
shared = { path = "../../shared", default-features = false }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
crc32fast = { workspace = true, default-features = false }
